fix mobile wrapping on claim list header

--- a/ui/scss/component/section.scss
+++ b/ui/scss/component/section.scss
@@ -23,6 +23,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .section__flex {
